--- a/index.html
+++ b/index.html
@@ -17,17 +17,20 @@
 
     .wrap{
       height: 100vh;
-      height: 100dvh;           /* better on mobile */
+      height: 100dvh;
       display:flex;
       align-items:center;
       justify-content:center;
-      padding:0;
+      padding: 10px;
+      box-sizing: border-box;
     }
 
+    /* Book fills the phone but stays “book-like” on bigger screens */
     #book{
-      width: 100vw;
-      height: 100vh;
-      height: 100dvh;
+      width: 100%;
+      height: 100%;
+      max-width: 520px;
+      max-height: 920px;
     }
 
     .page{
@@ -35,26 +38,24 @@
       box-sizing:border-box;
       width:100%;
       height:100%;
-      padding: 20px 18px;
       color:#111;
-      display:flex;
-      flex-direction:column;
-      justify-content:flex-start;
     }
 
-    /* Text pages: readable + scroll */
+    /* TEXT PAGES: readable + scroll */
     .page.text{
+      padding: 22px 18px;
       overflow:auto;
       -webkit-overflow-scrolling: touch;
     }
     .page.text p{
-      font-size:16px;
-      line-height:1.65;
-      margin:0;
-      white-space:pre-line;
+      font-size: 16px;
+      line-height: 1.75;
+      margin: 0;
+      white-space: pre-line;
+      overflow-wrap: anywhere;
     }
 
-    /* Image/Cover pages: NO cropping */
+    /* IMAGE/COVER PAGES: no cropping */
     .page.image, .page.cover{
       padding:0;
       background:#000;
@@ -65,9 +66,15 @@
     .page.image img, .page.cover img{
       width:100%;
       height:100%;
-      object-fit:contain;  /* fit image nicely */
+      object-fit: contain;
       display:block;
       background:#000;
+    }
+
+    /* Slightly bigger text on larger screens */
+    @media (min-width: 420px){
+      .page.text{ padding: 28px 24px; }
+      .page.text p{ font-size: 17px; }
     }
 
     /* Optional hint */
@@ -78,6 +85,7 @@
       color: rgba(255,255,255,.7);
       font-size: 12px;
       pointer-events:none;
+      user-select:none;
     }
   </style>
 </head>
@@ -88,7 +96,6 @@
   </div>
   <div class="hint">Swipe to flip • Tap left/right edges</div>
 
-  <!-- PageFlip library -->
   <script src="https://cdn.jsdelivr.net/npm/page-flip/dist/js/page-flip.browser.min.js"></script>
 
   <script>
@@ -127,7 +134,6 @@
       `;
     }
 
-    // Pages (cover + 0..23)
     const pages = [
       coverPage("assets/cover.png"),
       imagePage("assets/p0.png", "Page 0"),
@@ -273,23 +279,21 @@ story begins.`
     // Render pages
     bookEl.innerHTML = pages.map(p => `<div class="my-page">${p}</div>`).join("");
 
-    // Init flipbook (phone-first)
+    // Init: FORCE single page (phone-friendly)
     const pageFlip = new St.PageFlip(bookEl, {
       size: "stretch",
       showCover: true,
       usePortrait: true,
-      singlePage: true,           // FORCE one page
+      singlePage: true,
       mobileScrollSupport: true,
       maxShadowOpacity: 0.25,
-
-      // Base page size; stretch handles screen sizes
       width: 320,
       height: 520
     });
 
     pageFlip.loadFromHTML(document.querySelectorAll(".my-page"));
 
-    // Tap zones: left/right edges to flip
+    // Tap left/right edges to flip
     document.addEventListener("click", (e) => {
       const x = e.clientX;
       const w = window.innerWidth;
